refactor(InputView): 테스트 코드 작성을 위해 구조 변경함
테스트 코드 작성을 하기 위해 Console.readLine() 을 분리하였음